--- a/DataAccesses/DataAccesses.csproj
+++ b/DataAccesses/DataAccesses.csproj
@@ -49,7 +49,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ConnectionString.cs" />
     <Compile Include="DataCountriesManagement.cs" />
     <Compile Include="DataPeopleManegement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
